@@ -155,13 +155,13 @@ class StatPanel extends AbstractStatPanel {
     void setStatColumns() {
       stats = new IStat[] {new PuStat(), new ProductionStat(), new UnitsStat(), new TuvStat()};
       if (gameData.getMap().getTerritories().stream().anyMatch(Matches.territoryIsVictoryCity())) {
-        final List<IStat> stats = new ArrayList<>(Arrays.asList(StatPanel.this.stats));
+        final List<IStat> stats = new ArrayList<>(List.of(StatPanel.this.stats));
         stats.add(new VictoryCityStat());
         StatPanel.this.stats = stats.toArray(new IStat[0]);
       }
       // only add the vps in pacific
       if (gameData.getProperties().get(Constants.PACIFIC_THEATER, false)) {
-        final List<IStat> stats = new ArrayList<>(Arrays.asList(StatPanel.this.stats));
+        final List<IStat> stats = new ArrayList<>(List.of(StatPanel.this.stats));
         stats.add(new VpStat());
         StatPanel.this.stats = stats.toArray(new IStat[0]);
       }
