@@ -18,6 +18,7 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.function.Supplier;
 import javax.swing.Box;
 import javax.swing.BoxLayout;
@@ -58,12 +59,14 @@ public class UnitScroller {
       "Press 'n' or click this button to center the screen on the 'next' units with movement left";
   private static final String CENTER_UNITS_TOOLTIP =
       "Press 'c' or click this button to center the screen on current units.";
-  private static final String SLEEP_UNITS_TOOLTIP =
-      "Press 's' or click this button to sleep the current units, they will be automatically "
-          + "skipped until you move them.";
+  private static final String STATION_UNITS_TOOLTIP =
+      "Press 's' or click this button to station the current units, they will be automatically "
+          + "skipped until you move or wake them.";
   private static final String SKIP_UNITS_TOOLTIP =
       "Press 'space' or click this button to skip the current units and not move them during the "
           + "current move phase";
+  private static final String WAKE_ALL_TOOLTIP =
+      "Press 'w' or click this button to activate all skipped or stationed units";
 
   private static final String HIGHLIGHT_MOVABLE_TOOLTIP =
       "Press 'F' key or click this button to highlight movable units";
@@ -239,20 +242,26 @@ public class UnitScroller {
 
     panel.add(Box.createVerticalStrut(2));
 
-    final JButton skipButton = new JButton(UnitScrollerIcon.UNIT_SKIP.get());
+    final JButton skipButton = new JButton(UnitScrollerIcon.SKIP.get());
     skipButton.setToolTipText(SKIP_UNITS_TOOLTIP);
     skipButton.addActionListener(e -> skipCurrentUnits());
 
-    final JButton sleepButton = new JButton(UnitScrollerIcon.UNIT_SLEEP.get());
-    sleepButton.setToolTipText(SLEEP_UNITS_TOOLTIP);
-    sleepButton.addActionListener(e -> sleepCurrentUnits());
+    final JButton stationButton = new JButton(UnitScrollerIcon.STATION.get());
+    stationButton.setToolTipText(STATION_UNITS_TOOLTIP);
+    stationButton.addActionListener(e -> sleepCurrentUnits());
+
+    final JButton wakeAllButton = new JButton(UnitScrollerIcon.WAKE_ALL.get());
+    wakeAllButton.setToolTipText(WAKE_ALL_TOOLTIP);
+    wakeAllButton.addActionListener(e -> wakeAllUnits());
 
     final JPanel skipAndSleepPanel =
         new JPanelBuilder()
             .boxLayoutHorizontal()
             .add(skipButton)
             .addHorizontalStrut(HORIZONTAL_BUTTON_GAP)
-            .add(sleepButton)
+            .add(stationButton)
+            .addHorizontalStrut(HORIZONTAL_BUTTON_GAP)
+            .add(wakeAllButton)
             .build();
     skipAndSleepPanel.setAlignmentX(JComponent.CENTER_ALIGNMENT);
 
@@ -267,7 +276,7 @@ public class UnitScroller {
   public void centerOnCurrentMovableUnit() {
     if (lastFocusedTerritory != null && !getMovableUnits(lastFocusedTerritory).isEmpty()) {
       mapPanel.setUnitHighlight(
-          Collections.singleton(
+          Set.of(
               UnitScrollerModel.getMoveableUnits(
                   lastFocusedTerritory,
                   movePhaseSupplier.get(),
@@ -289,7 +298,7 @@ public class UnitScroller {
 
   private List<Unit> getMovableUnits(final Territory territory) {
     if (territory == null) {
-      return Collections.emptyList();
+      return List.of();
     }
     return UnitScrollerModel.getMoveableUnits(
         territory, movePhaseSupplier.get(), currentPlayerSupplier.get(), getAllSkippedUnits());
@@ -313,6 +322,13 @@ public class UnitScroller {
       updateMovesLeftLabel();
     }
     centerOnNextMovableUnit();
+  }
+
+  private void wakeAllUnits() {
+    sleepingUnits.clear();
+    skippedUnits.clear();
+    updateMovesLeftLabel();
+    centerOnCurrentMovableUnit();
   }
 
   public void centerOnNextMovableUnit() {
@@ -380,7 +396,7 @@ public class UnitScroller {
       if (!matchedUnits.isEmpty()) {
         drawUnitAvatarPane(t);
         newFocusedTerritory = t;
-        mapPanel.setUnitHighlight(Collections.singleton(matchedUnits));
+        mapPanel.setUnitHighlight(Set.of(matchedUnits));
         break;
       }
       // make sure to cycle through the front half of territories
