@@ -3,7 +3,6 @@ package games.strategy.engine.data.properties;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 
-import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -14,7 +13,7 @@ final class GamePropertiesTest {
     @Test
     void shouldBeAbleToRoundTripEditableProperties() throws Exception {
       final List<StringProperty> expected =
-          Arrays.asList(
+          List.of(
               new StringProperty("name1", "description1", "value1"),
               new StringProperty("name2", "description2", "value2"),
               new StringProperty("name3", "description3", "value3"));
